# magichawk

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: build_and_test.yml  ci.yml  release.yml
.githubactions/workflows/: release.yml
examples/: jpegdpi.rs  makepdf.rs  maketiff.rs  makezip.rs  usebmp.rs
magichawk/: Cargo.toml  Rocket.toml
magichawk/src/: decklist.rs  lib.rs  lookup.rs  main.rs  pdf.rs  scryfall.rs  scryfall_client.rs
magichawk/static/: index.html
magichawk/test_input/: card_data_consecrate.json  card_data_erayo.json  card_data_illithid.json  card_data_memory_lapse.json  card_data_reduced.json  default-cards_meld.json
printpdf-test/: Cargo.toml
printpdf-test/src/: main.rs
scryfall/: Cargo.toml
scryfall/bulk/: .gitignore
scryfall/src/: lib.rs
scryfall/test_input/: oracle-cards-20211228_truncated.json
scryfall/tests/: all_cards.rs  default_cards.rs  oracle_cards.rs  unique_artwork.rs
src/: lib.rs  main.rs
static/: index.html  multipage.html  multipage2.html
test_input/: card_data_reduced.json  default-cards-20200910090351_truncated.json
