[package]
name = "magichawk"
version = "0.2.0"
authors = ["Mathias Ritzmann <rimathia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
image = "0.23"
lazy_static = "1.4"
regex = "1"
rocket = "0.4.5"
fern = "0.6"
log = "0.4"
chrono = "0.4"
pdfgen_bindings = { git = "https://github.com/rimathia/PDFGenRustBindings.git" }
tempfile = "3.1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve"]

[dependencies.reqwest]
version = "0.10.6"
features = ["blocking"]