[package]
name = "magichawk"
version = "0.3.5"
authors = ["Mathias Ritzmann <rimathia@users.noreply.github.com>"]
edition = "2021"
default-run = "magichawk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = ">=0.4", features=["serde"]}
clap = {version = ">=3.1.18", features=["derive"]}
itertools = ">=0.10.0"
image = ">=0.23"
lazy_static = ">=1.4"
log = ">=0.4"
ngrammatic = ">=0.3"
ord_subset = ">=3"
printpdf = { version = ">=0.5" }
regex = ">=1"
reqwest = { version = ">=0.11.8", features=["blocking", "json"]}
rocket = {version = ">=0.5.0-rc.2", features=["json"]}
serde = {version = ">=1.0", features = ["derive"]}
serde_json = ">=1.0"
# tempfile = ">=3.1.0"
tokio = {version = ">=1.15.0", features=["time"]}