[package]
name = "magichawk"
version = "0.3.6"
authors = ["Mathias Ritzmann <rimathia@users.noreply.github.com>"]
edition = "2021"
default-run = "magichawk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = ">=3.1.18", features=["derive"]}
itertools = ">=0.10.0"
image = ">=0.23"
lazy_static = ">=1.4"
log = ">=0.4"
ngrammatic = ">=0.3"
ord_subset = ">=3"
printpdf = { version = ">=0.5.3", features=["embedded_images"] }
regex = ">=1"
reqwest = { version = ">=0.11.8", features=["blocking", "json"]}
rocket = {version = ">=0.5.0-rc.2", features=["json"]}
serde = {version = ">=1.0", features = ["derive"]}
serde_json = ">=1.0"
time = { version = ">=0.3.17", features=["serde", "formatting"] }
tokio = {version = ">=1.15.0", features=["time"]}
