[package]
name = "magichawk"
version = "0.3.8"
authors = ["Mathias Ritzmann <rimathia@users.noreply.github.com>"]
edition = "2021"
default-run = "magichawk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=4.0.32", features = ["derive"] }
itertools = ">=0.10.5"
lazy_static = ">=1.4"
log = ">=0.4.17"
ngrammatic = ">=0.4"
ord_subset = ">=3.1.1"
printpdf = { version = ">=0.5.3", features = ["embedded_images"] }
regex = ">=1.7.0"
reqwest = { version = ">=0.11.13", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
rocket = { version = ">=0.5.1", features = ["json"] }
serde = { version = ">=1.0.151", features = ["derive"] }
serde_json = ">=1.0.91"
tokio = { version = ">=1.23.0", features = ["time"] }
time = { version = ">=0.3.17", features = ["serde", "formatting"] }
